2000-09-12  Adam Fedor  <fedor@gnu.org>

	* configure.in: Check for symlin, readlink.

	* Source/GNUmakefile: Don't compile UnixFileHandle.m on mingw.
	(Will create WindowsFileHandle later...).

	* Source/NSFileManager.m (-createDirectoryAtPath:attributes:]): 
	Create subpaths on mingw.
	(isDeletableFileAtPath:): Implement for mingw.
	(createSymbolicLinkAtPath): Implement only if HAVE_SYMLINK
	(pathContentOfSymbolicLinkAtPath): Implement only if HAVE_READLINK

2000-09-13  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/base/Unicode.h:
	Make function encode_ustrtostr public
	* Headers/gnustep/base/NSString.h:
	Added extra encodings. Added missing methods 
	* Source/NSString.m: 
	Added basic implementation for missing methods
	[stringWithUTF8String:], [initWithUTF8String:], [UTF8String],
	[stringWithContentsOfURL:], [initWithContentsOfURL:], 
	[writeToURL:atomically:], [localizedCaseInsensitiveCompare:], 
	[localizedCompare:], [compare:options:range:locale:]
	* Source/NSGCString.m: 
	[getCharacters:] and [getCharacters:range:] use higher level
	methods for conversion.
	* Source/Unicode.m: 
	Added conversion with iconv, this needs HAVE_ICONV.
	Made normal conversions faster by unrolling the case switch.
	
2000-09-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Makefile.postamble (header-links): Restore functionality on unix
	lost in last change, also (for MINGW) copy header files to the
	Source/Foundation directory in addition to Headers/Foundation.
	* Source/NSConnection.m: Address problems reported by georg@ist.org ...
	([-connectionWithRegisteredName:host:usingNameServer:]) avoid returning
	local server connection - create new connection to it if necessary.
	([-rootProxy]) return root object if sent to server connection.
	Also added some more debug statements.
	* Source/NSDistantObject.m: ([-methodForSelector:]) implemented to
	(hopefully) fix problem in pasteboard stuff.

2000-09-11  Adam Fedor  <fedor@gnu.org>

	* Mingw fixes.